[package]
name = "atk_md0240"
version = "0.1.0"
edition = "2021"

[features]
default = ["heap_alloc"]
stack_alloc = []
heap_alloc = ["esp-alloc"] 

[dependencies]
bitflags = "2.9.0"
display-interface = "0.5.0"
esp-alloc = { version = "0.7.0", optional = true }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"